added reports integration
