# frontend/swagger/api.json
@@ -7,7 +7,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8081",
     "basePath": "/api/v1",
     "paths": {
         "/application/": {
@@ -812,6 +812,61 @@
                 }
             }
         },
+        "/report/my/application/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get my report by application id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Report"
+                ],
+                "summary": "Get by application id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of corresponding application",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Requested report",
+                        "schema": {
+                            "$ref": "#/definitions/docs.GetByApplicationIdResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data for getting report by id",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "User is not reviewer or this report does not belong to user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Report with given id not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/report/my/{id}": {
             "get": {
                 "security": [
@@ -947,13 +1002,6 @@
                         "type": "string",
                         "description": "Report text",
                         "name": "text",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "Report images",
-                        "name": "images",
                         "in": "formData",
                         "required": true
                     }
@@ -1505,6 +1553,14 @@
                 }
             }
         },
+        "docs.GetByApplicationIdResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "docs.GetHotelsResponse": {
             "type": "object",
             "properties": {
@@ -1683,7 +1739,16 @@
         "docs.ReportResponse": {
             "type": "object",
             "properties": {
+                "check_in_at": {
+                    "type": "string"
+                },
+                "check_out_at": {
+                    "type": "string"
+                },
                 "expiration_at": {
+                    "type": "string"
+                },
+                "hotel_name": {
                     "type": "string"
                 },
                 "id": {
@@ -1695,10 +1760,22 @@
                         "$ref": "#/definitions/docs.ReportImageResponse"
                     }
                 },
+                "location_name": {
+                    "type": "string"
+                },
+                "room_name": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "string"
                 },
+                "task": {
+                    "type": "string"
+                },
                 "text": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
